<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.BiodataActivity"
    tools:showIn="@layout/activity_biodata">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/biodata_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_form"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/nameBiodataRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:ms_multiline="false"
                    app:ms_hint="@string/hint_gender"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="false"
                    app:ms_floatingLabelText="@string/hint_gender"
                    app:ms_baseColor="@color/colorBase"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_errorColor="@color/colorError"
                    app:ms_thickness="1dp"
                    app:ms_hintColor="@color/colorBase"
                    app:ms_arrowColor="@color/colorBase"
                    app:ms_arrowSize="16dp"
                    app:ms_alignLabels="false"
                    app:ms_floatingLabelColor="@color/colorBase"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/jobRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_job"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/provinceSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:ms_multiline="false"
                    app:ms_hint="@string/hint_province"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="false"
                    app:ms_floatingLabelText="@string/hint_province"
                    app:ms_baseColor="@color/colorBase"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_errorColor="@color/colorError"
                    app:ms_thickness="1dp"
                    app:ms_hintColor="@color/colorBase"
                    app:ms_arrowColor="@color/colorBase"
                    app:ms_arrowSize="16dp"
                    app:ms_alignLabels="false"
                    app:ms_floatingLabelColor="@color/colorBase"/>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/citySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:ms_multiline="false"
                    app:ms_hint="@string/hint_city"
                    app:ms_enableFloatingLabel="true"
                    app:ms_enableErrorLabel="false"
                    app:ms_floatingLabelText="@string/hint_city"
                    app:ms_baseColor="@color/colorBase"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_errorColor="@color/colorError"
                    app:ms_thickness="1dp"
                    app:ms_hintColor="@color/colorBase"
                    app:ms_arrowColor="@color/colorBase"
                    app:ms_arrowSize="16dp"
                    app:ms_alignLabels="false"
                    app:ms_floatingLabelColor="@color/colorBase"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/addressRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:inputType="textMultiLine"
                        android:maxLines="3"
                        android:singleLine="false" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/action_register_end"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>